--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require": {
         "php": ">=7.1.3",
+        "lcobucci/jwt": "^3.3",
         "illuminate/support": "5.8.*",
         "illuminate/http": "5.8.*",
         "illuminate/contracts": "5.8.*",
