--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,15 @@
         "preferred-install": "dist"
     },
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.2",
         "lcobucci/jwt": "^3.3",
-        "illuminate/support": "5.8.*",
-        "illuminate/http": "5.8.*",
-        "illuminate/contracts": "5.8.*",
-        "illuminate/auth": "5.8.*"
+        "illuminate/support": "5.7.* || 5.8.* || ^6.0",
+        "illuminate/http": "5.7.* || 5.8.* || ^6.0",
+        "illuminate/contracts": "5.7.* || 5.8.* || ^6.0",
+        "illuminate/auth": "5.7.* || 5.8.* || ^6.0"
     },
     "require-dev": {
-        "illuminate/console": "5.8.*"
+        "illuminate/console": "5.7.* || 5.8.* || ^6.0"
     },
     "autoload": {
         "psr-4": {
